--- a/www/app/shared/layout/left-nav.html
+++ b/www/app/shared/layout/left-nav.html
@@ -1,4 +1,4 @@
-<md-sidenav id="left-nav" layout="column" class="md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('(min-width: 1400px)')" flex>
+<md-sidenav layout="column" class="animate" md-component-id="left" md-is-locked-open="$mdMedia('(min-width: 1400px)')" flex>
     <md-content class="md-primary user-plate" ng-show="user" ng-if="AuthService.isAuthorized()">
         <div layout="row">
             <img ng-src="http://www.bungie.net{{::user.profilePicturePath}}" style="width: 90px; height: 90px;"/>
