--- a/www/asset/scss/style.scss
+++ b/www/asset/scss/style.scss
@@ -2,3 +2,7 @@
 @import '_base';
 @import '_item-plate';
 @import '_menu';
+
+/*@import '../lib/ionic/scss/_variables';
+@import '../lib/ionic/scss/_mixins';
+@import '../lib/ionic/scss/_loading';*/
