--- a/www/asset/scss/_item-plate.scss
+++ b/www/asset/scss/_item-plate.scss
@@ -19,7 +19,6 @@
 }
 
 .item-plate {
-  border: 4px solid #ddd;
   cursor: pointer;
   box-sizing: border-box;
   position: relative;
@@ -41,20 +40,17 @@
     width: 20%;
   }
 
-  &:active {
-    opacity: 0.5;
-  }
-
-  &:focus {
-    opacity: 0.5;
-  }
-
   &.ng-hide {
     display: none;
   }
 
-  &.equipped {
-    opacity: 0.50;
+  .margin {
+    border: 4px solid #ddd;
+    margin: 3px;
+
+    &.grid-complete {
+      border: 4px solid rgb(245, 220, 86);
+    }
   }
 
   .header {
@@ -94,7 +90,7 @@
   }
 
   .footer {
-    background-color: #eee;
+    background: rgba(240,240,240,0.95);
     padding: 5px;
     text-align: right;
     overflow: hidden;
@@ -107,8 +103,16 @@
       color: rgba(245, 220, 86, 1);
     }
 
+    .character-name {
+      margin: 0 3px 0 3px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      word-break: break-all;
+      white-space: nowrap;
+    }
+
     .primary-stat {
-      text-shadow: 1px 1px 0 #000;
+      font-weight: bold;
 
       &.arc {
         color: rgb(133, 197, 236);
@@ -127,7 +131,7 @@
       }
     }
 
-    .emblem {
+    .icon {
       height: 18px;
       width: 18px;
       vertical-align: middle;
