--- a/www/app/component/auth/login.html
+++ b/www/app/component/auth/login.html
@@ -9,16 +9,8 @@
             PlayStation Network
         </md-button>
         <md-button ng-click="login('Wlid')">
-            <md-icon md-font-icon="ion-social-windows"></md-icon>
+            <md-icon md-font-icon="ion-xbox"></md-icon>
             Microsoft Account
-        </md-button>
-        <md-button ng-click="login('Google')">
-            <md-icon md-font-icon="ion-social-google"></md-icon>
-            Google
-        </md-button>
-        <md-button ng-click="login('Facebook')">
-            <md-icon md-font-icon="ion-social-facebook"></md-icon>
-            Facebook
         </md-button>
     </div>
 </md-content>
