--- a/www/app/shared/layout/left-nav.html
+++ b/www/app/shared/layout/left-nav.html
@@ -20,12 +20,10 @@
     <md-content class="md-primary user-plate login" ng-if="!AuthService.isAuthorized()" ng-click="navigate('app.login')" layout="column" layout-align="center center">
         <i class="fa fa-5x fa-sign-in"></i> Login to Bungie.net
     </md-content>
-    <!--
     <md-divider></md-divider>
-    <md-button md-no-ink class="md-accent text-center" ng-click="navigate('app.login')">
+    <md-button md-no-ink class="md-accent text-center" ng-click="navigate('app.ad')">
         Remove Advertisements
     </md-button>
-    -->
     <md-divider></md-divider>
     <md-button md-no-ink ng-click="navigate('app.vault')">
         <md-icon md-font-icon="fa fa-bank"></md-icon> Vault
