--- a/www/asset/scss/_item-plate.scss
+++ b/www/asset/scss/_item-plate.scss
@@ -5,7 +5,6 @@
   font-weight: bold;
   text-transform: uppercase;
   margin: 0;
-  padding: 8px 0 8px 0;
 }
 
 #item-sheet {
@@ -15,7 +14,8 @@
 .item-list {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  margin: 5px 0;
 }
 
 .item-plate {
@@ -105,6 +105,7 @@
 
     .character-name {
       margin: 0 3px 0 3px;
+      text-align: left;
       overflow: hidden;
       text-overflow: ellipsis;
       word-break: break-all;
