Updated for patch 1.1.2

--- a/www/app/shared/layout/menu.html
+++ b/www/app/shared/layout/menu.html
@@ -3,7 +3,7 @@
         <md-button md-no-ink ng-click="toggleLeft();" ng-if="showMenuToggle()" aria-label="Menu">
             <md-icon md-font-icon="fa fa-bars"></md-icon>
         </md-button>
-        <h1 class="md-toolbar-tools" layout-align-gt-sm="center" flex>Packmule</h1>
+        <h1 class="md-toolbar-tools" layout-align-gt-sm="center" flex>Packmule v{{ manifest.version }}</h1>
         <md-button md-no-ink ng-click="toggleRight();" hide-gt-sm aria-label="Filters">
             <md-icon md-font-icon="fa fa-filter"></md-icon>
         </md-button>
