--- a/www/app/component/auth/login.html
+++ b/www/app/component/auth/login.html
@@ -8,7 +8,7 @@
             <md-icon md-font-icon="ion-playstation"></md-icon>
             PlayStation Network
         </md-button>
-        <md-button ng-click="login('Wlid')">
+        <md-button ng-click="login('Xuid')">
             <md-icon md-font-icon="ion-xbox"></md-icon>
             Microsoft Account
         </md-button>
