--- a/www/app/shared/layout/menu.html
+++ b/www/app/shared/layout/menu.html
@@ -1,12 +1,10 @@
 <div layout="column" flex ng-controller="MenuCtrl">
-    <md-toolbar layout="row">
-        <md-button md-no-ink ng-click="toggleLeft();" ng-if="showMenuToggle()" aria-label="Menu">
-            <md-icon md-font-icon="fa fa-bars"></md-icon>
-        </md-button>
-        <h1 class="md-toolbar-tools" layout-align-gt-sm="center" flex>Packmule v{{ manifest.version }}</h1>
-        <md-button md-no-ink ng-click="toggleRight();" hide-gt-sm aria-label="Filters">
-            <md-icon md-font-icon="fa fa-filter"></md-icon>
-        </md-button>
+    <md-toolbar>
+        <div class="md-toolbar-tools">
+            <i ng-click="toggleLeft();" ng-if="showMenuToggle()" class="fa fa-bars"></i>
+            <h2 class="md-toolbar-tools">Packmule {{ manifest.version }}</h2>
+            <i ng-click="toggleRight();" hide-gt-sm class="fa fa-filter"></i>
+        </div>
     </md-toolbar>
 
     <div layout="row" flex>
